对接后端接口，后端接口文档存在问题，使用py脚本模拟请求得到真实的响应格式和请求格式，现在已经完成了图片生成api接口的对接。明天继续完成其他接口的对接以及项目的部署上线。

--- a/src/config/locale/messages/en/pages/photo-effect-details.json
+++ b/src/config/locale/messages/en/pages/photo-effect-details.json
@@ -105,7 +105,7 @@
           "block": "how-to",
           "title": "How to Use AI Fake Date?",
           "description": "Create date photos in seconds.",
-          "video": { "src": "/videos/demo.mp4", "poster": "/imgs/cms/AI-Fake-Date_美国女友_1.png" },
+          "video": { "src": "/videos/AI_Kissing.mp4", "poster": "/imgs/cms/AI-Fake-Date_美国女友_1.png" },
           "steps": [
             { "title": "Step 1", "description": "Choose a date scenario." },
             { "title": "Step 2", "description": "Upload your photo." },
@@ -167,7 +167,7 @@
           "block": "how-to",
           "title": "How to Use AI Hug Generator?",
           "description": "Create hug photos in seconds.",
-          "video": { "src": "/videos/demo.mp4", "poster": "/imgs/cms/Hug_拥抱_1.png" },
+          "video": { "src": "/videos/AI_Kissing.mp4", "poster": "/imgs/cms/Hug_拥抱_1.png" },
           "steps": [
             { "title": "Step 1", "description": "Choose your desired hug type." },
             { "title": "Step 2", "description": "Upload a photo." },
@@ -614,7 +614,7 @@
           "block": "how-to",
           "title": "How to Use AI Art Style?",
           "description": "Add artistic effects to photos in seconds.",
-          "video": { "src": "/videos/demo.mp4", "poster": "/img_video/imgs/艺术_冰雕_2.png" },
+          "video": { "src": "/videos/AI_Kissing.mp4", "poster": "/img_video/imgs/艺术_冰雕_2.png" },
           "steps": [
             { "title": "Step 1", "description": "Choose your desired art style type." },
             { "title": "Step 2", "description": "Upload a clear photo." },
@@ -733,7 +733,7 @@
           "block": "how-to",
           "title": "How to Use AI Role Swap?",
           "description": "Achieve creative scene swaps in seconds.",
-          "video": { "src": "/videos/demo.mp4", "poster": "/img_video/imgs/角色切换_AI老虎拥抱_2.png" },
+          "video": { "src": "/videos/AI_Kissing.mp4", "poster": "/img_video/imgs/角色切换_AI老虎拥抱_2.png" },
           "steps": [
             { "title": "Step 1", "description": "Choose your desired scene type." },
             { "title": "Step 2", "description": "Upload a clear photo." },
@@ -850,7 +850,7 @@
           "block": "how-to",
           "title": "How to Use AI Visual Effects?",
           "description": "Add effects in seconds.",
-          "video": { "src": "/videos/demo.mp4", "poster": "/img_video/imgs/视觉效果_AI爆炸效果_1.png" },
+          "video": { "src": "/videos/AI_Kissing.mp4", "poster": "/img_video/imgs/视觉效果_AI爆炸效果_1.png" },
           "steps": [
             { "title": "Step 1", "description": "Select the effect you want." },
             { "title": "Step 2", "description": "Upload your photo." },
@@ -988,7 +988,7 @@
           "block": "how-to",
           "title": "How to Use AI Muscle Photo?",
           "description": "Generate muscle photos in seconds.",
-          "video": { "src": "/videos/demo.mp4", "poster": "/img_video/imgs/AI-360-Rotation_肌肉展示_1.png" },
+          "video": { "src": "/videos/AI_Kissing.mp4", "poster": "/img_video/imgs/AI-360-Rotation_肌肉展示_1.png" },
           "steps": [
             { "title": "Step 1", "description": "Upload your photo." },
             { "title": "Step 2", "description": "Select Muscle Showcase effect." },
