--- a/src/config/locale/messages/zh/pages/index.json
+++ b/src/config/locale/messages/zh/pages/index.json
@@ -523,12 +523,6 @@
             "hover_image": "/img_video/imgs/Muscle_肌肉展示_2.png"
           },
           {
-            "title": "视频增强",
-            "url": "/video-enhancer",
-            "image": "/img_video/imgs/AI-Dance-Generator_肚皮舞_1.png",
-            "hover_image": "/img_video/imgs/AI-Dance-Generator_肚皮舞_2.png"
-          },
-          {
             "title": "AI 拥抱视频",
             "url": "/video-effects/ai-hug",
             "image": "/img_video/imgs/Hug_侧身依抱_1.png",
@@ -543,34 +537,28 @@
         ],
         "photo_items": [
           {
-            "title": "移除背景",
-            "url": "/remove-background",
+            "title": "AI 假约会",
+            "url": "/photo-effects/ai-fake-date-photo",
             "image": "/img_video/imgs/AI-Fake-Date_中国女友_1.png",
             "hover_image": "/img_video/imgs/AI-Fake-Date_中国女友_2.png"
           },
           {
-            "title": "AI 图像增强",
-            "url": "/image-enhancer",
-            "image": "/img_video/imgs/AI-Kissing_脸颊之吻_1.png",
-            "hover_image": "/img_video/imgs/AI-Kissing_脸颊之吻_2.png"
+            "title": "AI 怀孕",
+            "url": "/photo-effects/ai-pregnant-photo",
+            "image": "/img_video/imgs/Pregnant-AI_怀孕_1.png",
+            "hover_image": "/img_video/imgs/Pregnant-AI_怀孕_2.png"
           },
           {
-            "title": "照片转卡通",
-            "url": "/photo-to-cartoon",
-            "image": "/img_video/imgs/AI-Fake-Date_日本女友_1.png",
-            "hover_image": "/img_video/imgs/AI-Fake-Date_日本女友_2.png"
+            "title": "名人自拍",
+            "url": "/photo-effects/ai-celebrity-selfie",
+            "image": "/img_video/imgs/AI-Selfie-with-Celebrities_名人合拍_1.png",
+            "hover_image": "/img_video/imgs/AI-Selfie-with-Celebrities_名人合拍_2.png"
           },
           {
-            "title": "换脸",
-            "url": "/face-swap",
-            "image": "/img_video/imgs/角色切换_审讯室_1.png",
-            "hover_image": "/img_video/imgs/角色切换_审讯室_2.png"
-          },
-          {
-            "title": "物体移除",
-            "url": "/object-remover",
-            "image": "/img_video/imgs/Hug_拥抱_1.png",
-            "hover_image": "/img_video/imgs/Hug_拥抱_2.png"
+            "title": "AI 艺术风格",
+            "url": "/photo-effects/art-style",
+            "image": "/img_video/imgs/艺术_冰雕_1.png",
+            "hover_image": "/img_video/imgs/艺术_冰雕_2.png"
           }
         ]
       },
